--- a/Com.Ericmas001.DependencyInjection/Com.Ericmas001.DependencyInjection.csproj
+++ b/Com.Ericmas001.DependencyInjection/Com.Ericmas001.DependencyInjection.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractRegistrant.cs" />
+    <Compile Include="InstanceRegisteredElement.cs" />
     <Compile Include="NamedImplementationRegisteredElement.cs" />
     <Compile Include="ImplementationRegisteredElement.cs" />
     <Compile Include="IRegisteredElement.cs" />
