--- a/Com.Ericmas001.DependencyInjection.Unity/Com.Ericmas001.DependencyInjection.Unity.csproj
+++ b/Com.Ericmas001.DependencyInjection.Unity/Com.Ericmas001.DependencyInjection.Unity.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="UnityHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnityResolverService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
