Include symbols for MyGet

--- a/Com.Ericmas001.DependencyInjection.Unity/Com.Ericmas001.DependencyInjection.Unity.csproj
+++ b/Com.Ericmas001.DependencyInjection.Unity/Com.Ericmas001.DependencyInjection.Unity.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <IncludeSymbols>True</IncludeSymbols>
+    <IncludeSource>True</IncludeSource>
   </PropertyGroup>
 
   <ItemGroup>
