--- a/Com.Ericmas001.DependencyInjection/Com.Ericmas001.DependencyInjection.csproj
+++ b/Com.Ericmas001.DependencyInjection/Com.Ericmas001.DependencyInjection.csproj
@@ -4,6 +4,19 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <IncludeSymbols>True</IncludeSymbols>
     <IncludeSource>True</IncludeSource>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Authors>Ericmas001</Authors>
+    <Company />
+    <Description>Com.Ericmas001.DependencyInjection</Description>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/Com-Ericmas001/DependencyInjection/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Com-Ericmas001/DependencyInjection</PackageProjectUrl>
+    <PackageIconUrl>https://avatars2.githubusercontent.com/u/19626491</PackageIconUrl>
+    <RepositoryUrl>https://github.com/Com-Ericmas001/DependencyInjection</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <PackageReleaseNotes>Development Version</PackageReleaseNotes>
+    <NeutralLanguage>en</NeutralLanguage>
+    <Version>0.2.0</Version>
   </PropertyGroup>
 
 </Project>
