--- a/Com.Ericmas001.DependencyInjection.Autofac/Com.Ericmas001.DependencyInjection.Autofac.csproj
+++ b/Com.Ericmas001.DependencyInjection.Autofac/Com.Ericmas001.DependencyInjection.Autofac.csproj
@@ -8,7 +8,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Authors>Ericmas001</Authors>
     <Company />
-    <Description>Com.Ericmas001.DependencyInjection</Description>
+    <Description>Com.Ericmas001.DependencyInjection.Autofac</Description>
     <PackageLicenseUrl>https://raw.githubusercontent.com/Com-Ericmas001/DependencyInjection/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/Com-Ericmas001/DependencyInjection</PackageProjectUrl>
     <PackageIconUrl>https://github.com/Com-Ericmas001/Common/raw/master/Resources/lib.png</PackageIconUrl>
@@ -18,5 +18,13 @@
     <NeutralLanguage>en</NeutralLanguage>
     <Version>0.3.0</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Com.Ericmas001.DependencyInjection\Com.Ericmas001.DependencyInjection.csproj" />
+  </ItemGroup>
 
 </Project>
