--- a/Com.Ericmas001.DependencyInjection.Microsoft/Com.Ericmas001.DependencyInjection.Microsoft.csproj
+++ b/Com.Ericmas001.DependencyInjection.Microsoft/Com.Ericmas001.DependencyInjection.Microsoft.csproj
@@ -8,7 +8,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Authors>Ericmas001</Authors>
     <Company />
-    <Description>Com.Ericmas001.DependencyInjection.Unity</Description>
+    <Description>Com.Ericmas001.DependencyInjection.Microsoft</Description>
     <PackageLicenseUrl>https://raw.githubusercontent.com/Com-Ericmas001/DependencyInjection/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/Com-Ericmas001/DependencyInjection</PackageProjectUrl>
     <PackageIconUrl>https://github.com/Com-Ericmas001/Common/raw/master/Resources/lib.png</PackageIconUrl>
@@ -21,8 +21,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Unity.Abstractions" Version="3.3.0" />
-    <PackageReference Include="Unity.Container" Version="5.8.6" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
