--- a/Com.Ericmas001.DependencyInjection.Unity/Com.Ericmas001.DependencyInjection.Unity.csproj
+++ b/Com.Ericmas001.DependencyInjection.Unity/Com.Ericmas001.DependencyInjection.Unity.csproj
@@ -9,20 +9,21 @@
     <Authors>Ericmas001</Authors>
     <Company />
     <Description>Com.Ericmas001.DependencyInjection.Unity</Description>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/Com-Ericmas001/DependencyInjection/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/Com-Ericmas001/DependencyInjection</PackageProjectUrl>
     <PackageIconUrl>https://github.com/Com-Ericmas001/Common/raw/master/Resources/lib.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/Com-Ericmas001/DependencyInjection</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <PackageReleaseNotes>Development Version</PackageReleaseNotes>
     <NeutralLanguage>en</NeutralLanguage>
-    <Version>3.0.0</Version>
+    <Version>4.0.0</Version>
     <PackageTags>dependencyinjection</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Unity.Abstractions" Version="4.0.3" />
-    <PackageReference Include="Unity.Container" Version="5.9.5" />
+    <PackageReference Include="Unity.Abstractions" Version="4.1.3" />
+    <PackageReference Include="Unity.Container" Version="5.10.3" />
   </ItemGroup>
 
   <ItemGroup>
