--- a/Com.Ericmas001.DependencyInjection.Autofac/Com.Ericmas001.DependencyInjection.Autofac.csproj
+++ b/Com.Ericmas001.DependencyInjection.Autofac/Com.Ericmas001.DependencyInjection.Autofac.csproj
@@ -8,14 +8,17 @@
     <Description>Com.Ericmas001.DependencyInjection.Autofac</Description>
     <Copyright>Ericmas001</Copyright>
     <PackageReleaseNotes>Development Version</PackageReleaseNotes>
-    <PackageIconUrl>https://github.com/Com-Ericmas001/Common/raw/master/Resources/lib.png</PackageIconUrl>
+    <PackageIcon>icon.png</PackageIcon>
     <PackageProjectUrl>https://github.com/Com-Ericmas001/DependencyInjection</PackageProjectUrl>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/Com-Ericmas001/DependencyInjection/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.2.1" />
+    <None Include="_Nuget\icon.png" Pack="true" PackagePath="" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
